skills: Refresh the skills section.

--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
                     <a href="#about">About</a>
                   </li>
                   <li>
-                    <a href="#gallery">Gallery</a>
+                    <a href="#interests">Interests</a>
                   </li>
                   <li>
-                    <a href="#interests">Interests</a>
+                    <a href="#gallery">Gallery</a>
                   </li>
                 </ul>
               </nav>
@@ -142,13 +142,13 @@
         <!--End of Header-->
 
         <!--Banner Content-->
-        <div id="banner-content" class="row clearfix">
+        <div id="banner-content" class="row clearfix">    
           <div class="col-38">
             <div class="section-heading">
               <h1 style="text-shadow: 3px 3px #686868">KENNETH RODRIGUES</h1>
               <h2>
-                Software Developer | Open Source Enthusiast | Artificial
-                Intelligence
+                Software Developer | Open Source Contributor | Artificial
+                Intelligence | Systems Engineer
               </h2>
             </div>
 
@@ -266,6 +266,123 @@
         </section>
         <!--End of Introduction-->
 
+        <!--Clients-->
+        <section id="interests" class="scrollto clearfix">
+          <div class="row clearfix">
+            <div class="col-3">
+              <div class="section-heading">
+                <h3>TECH</h3>
+                <h2 class="section-title">Skills and Interests</h2>
+                <p class="" style="line-height: 2; font-size: 1.1em;">
+                  <strong style="color: #2c3e50; font-size: 1.2em; text-transform: uppercase; letter-spacing: 1px;">Languages:</strong><br>
+                  <span style="margin-left: 20px; display: inline-block; margin-top: 8px;">
+                    <strong>Programming:</strong> <span style="color: #34495e;">Python, PHP, C, C++, Java, Go, JavaScript, TypeScript</span><br>
+                    <strong>Databases:</strong> <span style="color: #34495e;">SQL (PostgreSQL, MySQL), Cassandra DB (CQL), MongoDB, Redshift, Redis, Chrome DB</span>
+                  </span><br><br>
+                  <strong style="color: #2c3e50; font-size: 1.2em; text-transform: uppercase; letter-spacing: 1px;">Technologies:</strong><br>
+                  <span style="margin-left: 20px; display: inline-block; margin-top: 8px;">
+                    <strong>Frontend:</strong> <span style="color: #34495e;">React, Handelbars, JQuery</span> 
+                  </br><strong>Backend:</strong> <span style="color: #34495e;">Node.js, Flask, Django, Kafka</span> 
+                  </br><strong>APIs:</strong> <span style="color: #34495e;">REST, GRPC</span>
+                  </br><strong>Cloud:</strong> <span style="color: #34495e;">AWS (EC2, ECS, S3, Lambda, DynamoDB), Azure (VM, Storage, Functions)</span> 
+                  </br><strong>DevOps:</strong> <span style="color: #34495e;">Docker, Git, CI/CD, Kubernetes, Elastic Stack (Elasticsearch, Logstash, Kibana)</span>
+                  </br><strong>AI/ML:</strong> <span style="color: #34495e;">Supervised Learning, Transformers, LLMs, Fine-tuning, RAG, LangChain, Computer Vision, TensorFlow, PyTorch</span>
+                  </span>
+                </p>
+              </div>
+            </div>
+
+            <div class="col-2-3">
+              <a href="#" class="col-3">
+                <img
+                  src="images/company-images/company-logo1.png"
+                  alt="React"
+                />
+                <div class="client-overlay"><span>React</span></div>
+              </a>
+              <a href="#" class="col-3">
+                <img
+                  src="images/company-images/company-logo2.png"
+                  alt="Django"
+                />
+                <div class="client-overlay"><span>Django</span></div>
+              </a>
+              <a href="#" class="col-3">
+                <img
+                  src="images/company-images/company-logo3.png"
+                  alt="OpenCV"
+                />
+                <div class="client-overlay"><span>OpenCV</span></div>
+              </a>
+              <a href="#" class="col-3">
+                <img
+                  src="images/company-images/company-logo4.png"
+                  alt="TensorFlow"
+                />
+                <div class="client-overlay"><span>TensorFlow</span></div>
+              </a>
+              <a href="#" class="col-3">
+                <img
+                  src="images/company-images/company-logo5.png"
+                  alt="TypeScript"
+                />
+                <div class="client-overlay"><span>TypeScript</span></div>
+              </a>
+              <a href="#" class="col-3">
+                <img
+                  src="images/company-images/company-logo6.png"
+                  alt="LLM"
+                />
+                <div class="client-overlay"><span>LLM</span></div>
+              </a>
+              <a href="#" class="col-3">
+                <img
+                  src="images/company-images/company-logo7.png"
+                  alt="OWASP"
+                />
+                <div class="client-overlay"><span>OWASP</span></div>
+              </a>
+              <a href="#" class="col-3">
+                <img
+                  src="images/company-images/company-logo8.png"
+                  alt="Azure"
+                />
+                <div class="client-overlay"><span>Azure</span></div>
+              </a>
+
+              <a href="#" class="col-3">
+                <img
+                  src="images/company-images/company-logo9.png"
+                  alt="Tailwind"
+                />
+                <div class="client-overlay"><span>Tailwind</span></div>
+              </a>
+              <a href="#" class="col-3">
+                <img
+                  src="images/company-images/company-logo10.png"
+                  alt="Docker"
+                />
+                <div class="client-overlay"><span>Docker</span></div>
+              </a>
+              <a href="#" class="col-3">
+                <img
+                  src="images/company-images/company-logo11.png"
+                  alt="Kubernetes"
+                />
+                <div class="client-overlay"><span>Kubernetes</span></div>
+              </a>
+              <a href="#" class="col-3">
+                <img
+                  src="images/company-images/company-logo12.png"
+                  alt="AWS"
+                />
+                <div class="client-overlay"><span>AWS</span></div>
+              </a>
+            </div>
+          </div>
+        </section>
+        <!--End of Clients-->
+
         <!--Gallery-->
         <aside
           id="gallery"
@@ -329,91 +446,6 @@
           /></a>
         </aside>
         <!--End of Gallery-->
-
-        <!--Clients-->
-        <section id="interests" class="scrollto clearfix">
-          <div class="row clearfix">
-            <div class="col-3">
-              <div class="section-heading">
-                <h3>TECH</h3>
-                <h2 class="section-title">Skills and Interests</h2>
-                <p class="section-subtitle">
-                  I have a wide range of interests and skills in the tech
-                  industry. I have worked on a variety of projects and research
-                  in the fields of Machine Learning, AI and Computer Vision.
-                </p>
-              </div>
-            </div>
-
-            <div class="col-2-3">
-              <a href="#" class="col-3">
-                <img
-                  src="images/company-images/company-logo1.png"
-                  alt="Company"
-                />
-                <div class="client-overlay"><span>Tree</span></div>
-              </a>
-              <a href="#" class="col-3">
-                <img
-                  src="images/company-images/company-logo2.png"
-                  alt="Company"
-                />
-                <div class="client-overlay"><span>Fingerprint</span></div>
-              </a>
-              <a href="#" class="col-3">
-                <img
-                  src="images/company-images/company-logo3.png"
-                  alt="Company"
-                />
-                <div class="client-overlay"><span>The Man</span></div>
-              </a>
-              <a href="#" class="col-3">
-                <img
-                  src="images/company-images/company-logo4.png"
-                  alt="Company"
-                />
-                <div class="client-overlay"><span>Mustache</span></div>
-              </a>
-              <a href="#" class="col-3">
-                <img
-                  src="images/company-images/company-logo5.png"
-                  alt="Company"
-                />
-                <div class="client-overlay"><span>Goat</span></div>
-              </a>
-              <a href="#" class="col-3">
-                <img
-                  src="images/company-images/company-logo6.png"
-                  alt="Company"
-                />
-                <div class="client-overlay"><span>Justice</span></div>
-              </a>
-              <a href="#" class="col-3">
-                <img
-                  src="images/company-images/company-logo7.png"
-                  alt="Company"
-                />
-                <div class="client-overlay"><span>Ball</span></div>
-              </a>
-              <a href="#" class="col-3">
-                <img
-                  src="images/company-images/company-logo8.png"
-                  alt="Company"
-                />
-                <div class="client-overlay"><span>Cold</span></div>
-              </a>
-
-              <a href="#" class="col-3">
-                <img
-                  src="images/company-images/company-logo9.png"
-                  alt="Company"
-                />
-                <div class="client-overlay"><span>Cold</span></div>
-              </a>
-            </div>
-          </div>
-        </section>
-        <!--End of Clients-->
       </main>
       <!--End Main Content Area-->
 
