project-details: Add new section to dsiplay project details.

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <a href="#banner">Home</a>
                   </li>
                   <li>
-                    <a href="#about">About</a>
+                    <a href="#about">Projects</a>
                   </li>
                   <li>
                     <a href="#interests">Interests</a>
@@ -179,87 +179,107 @@
 
             <div class="col-2-3">
               <!--Icon Block-->
-              <div
-                class="col-2 icon-block icon-top wow fadeInUp"
-                data-wow-delay="0.1s"
-              >
-                <!--Icon-->
-                <div class="icon">
-                  <i class="fa fa-shield fa-2x"></i>
+              <a href="project-details.html?project=vibranium" style="text-decoration: none; color: inherit;">
+                <div
+                  class="col-2 icon-block icon-top wow fadeInUp"
+                  data-wow-delay="0.1s"
+                  style="cursor: pointer; transition: transform 0.3s;"
+                  onmouseover="this.style.transform='translateY(-5px)'"
+                  onmouseout="this.style.transform='translateY(0)'"
+                >
+                  <!--Icon-->
+                  <div class="icon">
+                    <i class="fa fa-shield fa-2x"></i>
+                  </div>
+                  <!--Icon Block Description-->
+                  <div class="icon-block-description">
+                    <h4>Vibranium - API Security</h4>
+                    <p>
+                      This project developed an API security solution including an
+                      SDK, GitHub action, penetration testing server, and proxy
+                      server.
+                    </p>
+                  </div>
                 </div>
-                <!--Icon Block Description-->
-                <div class="icon-block-description">
-                  <h4>Vibranium - API Security</h4>
-                  <p>
-                    This project developed an API security solution including an
-                    SDK, GitHub action, penetration testing server, and proxy
-                    server.
-                  </p>
-                </div>
-              </div>
+              </a>
               <!--End of Icon Block-->
 
               <!--Icon Block-->
-              <div
-                class="col-2 icon-block icon-top wow fadeInUp"
-                data-wow-delay="0.3s"
-              >
-                <!--Icon-->
-                <div class="icon">
-                  <i class="fa fa-camera fa-2x"></i>
+              <a href="project-details.html?project=rakshak" style="text-decoration: none; color: inherit;">
+                <div
+                  class="col-2 icon-block icon-top wow fadeInUp"
+                  data-wow-delay="0.3s"
+                  style="cursor: pointer; transition: transform 0.3s;"
+                  onmouseover="this.style.transform='translateY(-5px)'"
+                  onmouseout="this.style.transform='translateY(0)'"
+                >
+                  <!--Icon-->
+                  <div class="icon">
+                    <i class="fa fa-camera fa-2x"></i>
+                  </div>
+                  <!--Icon Block Description-->
+                  <div class="icon-block-description">
+                    <h4>Rakshak - CCTV based security solution</h4>
+                    <p>
+                      Developed an all-in-one smart CCTV solution with 12+ machine
+                      learning models for various detection tasks, integraed with
+                      web and mobile apps
+                    </p>
+                  </div>
                 </div>
-                <!--Icon Block Description-->
-                <div class="icon-block-description">
-                  <h4>Rakshak - CCTV based security solution</h4>
-                  <p>
-                    Developed an all-in-one smart CCTV solution with 12+ machine
-                    learning models for various detection tasks, integraed with
-                    web and mobile apps
-                  </p>
-                </div>
-              </div>
+              </a>
               <!--End of Icon Block-->
 
               <!--Icon Block-->
-              <div
-                class="col-2 icon-block icon-top wow fadeInUp"
-                data-wow-delay="0.5s"
-              >
-                <!--Icon-->
-                <div class="icon">
-                  <i class="fa fa-shopping-bag fa-2x"></i>
+              <a href="project-details.html?project=outfitai" style="text-decoration: none; color: inherit;">
+                <div
+                  class="col-2 icon-block icon-top wow fadeInUp"
+                  data-wow-delay="0.5s"
+                  style="cursor: pointer; transition: transform 0.3s;"
+                  onmouseover="this.style.transform='translateY(-5px)'"
+                  onmouseout="this.style.transform='translateY(0)'"
+                >
+                  <!--Icon-->
+                  <div class="icon">
+                    <i class="fa fa-shopping-bag fa-2x"></i>
+                  </div>
+                  <!--Icon Block Description-->
+                  <div class="icon-block-description">
+                    <h4>OutfitAI - Generative AI for oufits</h4>
+                    <p>
+                      Built a GenAI-powered e-commerce website with ML-based
+                      product recommendations and a fashion recommendation chatbot
+                      that generates AI outfits and suggests similar products.
+                    </p>
+                  </div>
                 </div>
-                <!--Icon Block Description-->
-                <div class="icon-block-description">
-                  <h4>OutfitAI - Generative AI for oufits</h4>
-                  <p>
-                    Built a GenAI-powered e-commerce website with ML-based
-                    product recommendations and a fashion recommendation chatbot
-                    that generates AI outfits and suggests similar products.
-                  </p>
-                </div>
-              </div>
+              </a>
               <!--End of Icon Block-->
 
               <!--Icon Block-->
-              <div
-                class="col-2 icon-block icon-top wow fadeInUp"
-                data-wow-delay="0.5s"
-              >
-                <!--Icon-->
-                <div class="icon">
-                  <i class="fa fa-link fa-2x"></i>
+              <a href="project-details.html?project=shortenit" style="text-decoration: none; color: inherit;">
+                <div
+                  class="col-2 icon-block icon-top wow fadeInUp"
+                  data-wow-delay="0.5s"
+                  style="cursor: pointer; transition: transform 0.3s;"
+                  onmouseover="this.style.transform='translateY(-5px)'"
+                  onmouseout="this.style.transform='translateY(0)'"
+                >
+                  <!--Icon-->
+                  <div class="icon">
+                    <i class="fa fa-link fa-2x"></i>
+                  </div>
+                  <!--Icon Block Description-->
+                  <div class="icon-block-description">
+                    <h4>ShortenIt - URL shortener</h4>
+                    <p>
+                      Implemented a web-based URL shortener using JSP and Perl
+                      CGI, hashing URLs into unique 8-character strings with
+                      CRC32, featuring analytics and customizable links.
+                    </p>
+                  </div>
                 </div>
-                <!--Icon Block Description-->
-                <div class="icon-block-description">
-                  <h4>ShortenIt - URL shortener</h4>
-                  <p>
-                    Implemented a web-based URL shortener using JSP and Perl
-                    CGI, hashing URLs into unique 8-character strings with
-                    CRC32, featuring analytics and customizable links.
-                  </p>
-                </div>
-              </div>
+              </a>
               <!--End of Icon Block-->
             </div>
           </div>
