project: Add project details.

--- a/project-details.html
+++ b/project-details.html
@@ -389,158 +389,10 @@
     <script src="js/images-loaded.min.js"></script>
     <script src="js/lightbox.min.js"></script>
     <script src="js/site.js"></script>
+    <script src="js/projects.js"></script>
 
     <!-- Project Data and Loading Script -->
     <script>
-      // Project data storage
-      const projects = {
-        vibranium: {
-          title: "Vibranium - API Security",
-          subtitle: "Comprehensive API Security Solution",
-          tags: ["Security", "API", "DevOps", "Penetration Testing"],
-          description: [
-            "Developed a comprehensive API security solution with SDK, GitHub action, penetration testing server, and proxy server",
-            "Provides robust security measures for API endpoints with automated security testing through CI/CD pipelines",
-            "Implements real-time threat detection and mitigation capabilities"
-          ],
-          technologies: [
-            "Python",
-            "Node.js",
-            "Docker",
-            "Kubernetes",
-            "GitHub Actions",
-            "REST APIs",
-            "OWASP Security Standards"
-          ],
-          links: [
-            {
-              text: "GitHub",
-              url: "https://github.com/kennethnrk/vibranium",
-              icon: "fa-github"
-            },
-            {
-              text: "Documentation",
-              url: "#",
-              icon: "fa-book"
-            }
-          ],
-          gallery: [
-            "images/gallery-images/gallery-image-1.jpg",
-            "images/gallery-images/gallery-image-2.jpg",
-            "images/gallery-images/gallery-image-3.jpg"
-          ]
-        },
-        rakshak: {
-          title: "Rakshak - CCTV based security solution",
-          subtitle: "AI-Powered Smart CCTV System",
-          tags: ["Machine Learning", "Computer Vision", "Security", "AI/ML"],
-          description: [
-            "Developed an all-in-one smart CCTV solution with 12+ machine learning models for various detection tasks",
-            "Integrated with web and mobile apps for seamless user experience",
-            "Provides real-time object detection, facial recognition, and anomaly detection",
-            "Features automated alert systems for enhanced security monitoring"
-          ],
-          technologies: [
-            "Python",
-            "TensorFlow",
-            "PyTorch",
-            "OpenCV",
-            "React",
-            "Node.js",
-            "Django",
-            "Computer Vision",
-            "Neural Networks"
-          ],
-          links: [
-            {
-              text: "GitHub",
-              url: "https://github.com/kennethnrk/rakshak",
-              icon: "fa-github"
-            },
-            {
-              text: "Demo",
-              url: "#",
-              icon: "fa-external-link"
-            }
-          ],
-          gallery: [
-            "images/gallery-images/gallery-image-4.jpg",
-            "images/gallery-images/gallery-image-5.jpg",
-            "images/gallery-images/gallery-image-6.jpg"
-          ]
-        },
-        outfitai: {
-          title: "OutfitAI - Generative AI for outfits",
-          subtitle: "GenAI-Powered E-commerce Platform",
-          tags: ["AI/ML", "LLMs", "E-commerce", "Frontend", "Backend"],
-          description: [
-            "Built a GenAI-powered e-commerce website with ML-based product recommendations",
-            "Developed a fashion recommendation chatbot that generates AI outfits and suggests similar products",
-            "Leverages large language models for natural language understanding",
-            "Uses generative AI for creating personalized outfit combinations"
-          ],
-          technologies: [
-            "Python",
-            "React",
-            "Node.js",
-            "LLMs",
-            "LangChain",
-            "TensorFlow",
-            "RAG",
-            "Fine-tuning",
-            "REST APIs"
-          ],
-          links: [
-            {
-              text: "GitHub",
-              url: "https://github.com/kennethnrk/outfitai",
-              icon: "fa-github"
-            },
-            {
-              text: "Live Demo",
-              url: "#",
-              icon: "fa-external-link"
-            }
-          ],
-          gallery: [
-            "images/gallery-images/gallery-image-1.jpg",
-            "images/gallery-images/gallery-image-2.jpg",
-            "images/gallery-images/gallery-image-3.jpg",
-            "images/gallery-images/gallery-image-4.jpg"
-          ]
-        },
-        shortenit: {
-          title: "ShortenIt - URL shortener",
-          subtitle: "Web-based URL Shortening Service",
-          tags: ["Backend", "Web Development", "Analytics"],
-          description: [
-            "Implemented a web-based URL shortener using JSP and Perl CGI",
-            "Hashes URLs into unique 8-character strings with CRC32 algorithm",
-            "Features analytics and customizable links with detailed click tracking",
-            "Provides custom link aliases and QR code generation for easy sharing"
-          ],
-          technologies: [
-            "Java",
-            "JSP",
-            "Perl",
-            "CGI",
-            "MySQL",
-            "JavaScript",
-            "HTML/CSS"
-          ],
-          links: [
-            {
-              text: "GitHub",
-              url: "https://github.com/kennethnrk/shortenit",
-              icon: "fa-github"
-            }
-          ],
-          gallery: [
-            "images/gallery-images/gallery-image-5.jpg",
-            "images/gallery-images/gallery-image-6.jpg"
-          ]
-        }
-      };
 
       // Get URL parameter
       function getUrlParameter(name) {
