--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
               <!--End of Icon Block-->
 
               <!--Icon Block-->
-              <a href="#" style="text-decoration: none; color: inherit;">
+              <a href="project-details.html?project=edgernetes" style="text-decoration: none; color: inherit;">
                 <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.2s"
                   style="cursor: pointer; transition: transform 0.3s;"
                   onmouseover="this.style.transform='translateY(-5px)'"
